# copti

./: .gitignore  Makefile  README.md  pyproject.toml
notebooks/: gradient_hessian_multi_scalar_func.ipynb  week1.ipynb  week2.ipynb  week4.ipynb  week5.ipynb  week6.ipynb  week7.ipynb
src/copti/: main.py
src/copti/calculus/: multivar.py  vec_multivar.py
src/copti/data/: __init__.py  lp.py
src/copti/lp/: __init__.py  convert.py
src/copti/lp/active_set/: __init__.py  revised_simplex.py
src/copti/plot/: contour.py
src/copti/quad/: __init__.py  active_set.py  solvers.py
src/copti/quad/active_set/: __init__.py  dual_active_set.py
src/copti/quad/system/: __init__.py  recycle.py
tests/calculus/: test_multivar.py  test_vec_multivar.py
