[tool.poetry]
name = "copti"
version = "0.1.0"
description = ""
authors = ["William Marstrand <wdmdevelop@gmail.com>"]
readme = "README.md"
packages = [{include = "copti", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
